--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 <body>
     <div class="signs">
         <div class="g-signin2" data-onsuccess="onSignIn"></div>
-        <a href="#" class="signOut hidden" onclick="onSignOut();">Sign out</a>
+        <a href="#" class="signOut" onclick="onSignOut();">Sign out</a>
     </div>
 
 
-    <div class ="mainContainer hidden">
+    <div class ="mainContainer">
         <!--Text greeting user-->
         <header>
             <h1>WELCOME <span class="userName">USER_NAME</span></h1>    
