--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>myOAuth</title>
 
     <!--Reference platform.js library here-->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 
     <!--Reference Client ID in meta tag here-->
+    <meta name="google-signin-client_id" content="392149063814-e4q6optj7tdrcdftrpfuqkjmvr1f65fq.apps.googleusercontent.com">
 
 
     <!--jquery-->
